@@ -1,21 +1,21 @@
 package com.serjnn.ClientService.models;
 
-import com.fasterxml.jackson.annotation.JsonIgnore;
 import jakarta.persistence.*;
-import lombok.Data;
+import lombok.Getter;
 import lombok.NoArgsConstructor;
+import lombok.Setter;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
-import org.springframework.security.core.userdetails.UserDetailsService;
 
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 
 
 @NoArgsConstructor
 @Entity
-@Data
+@Getter
+@Setter
 @Table(name = "client")
 public class Client implements UserDetails {
     @Id
@@ -34,39 +34,21 @@ public class Client implements UserDetails {
     @Column(length = 10, nullable = true)
     private String role;
 
-    public Client(String username,String password) {
+    public Client(String username, String password) {
         this.username = username;
         this.password = password;
     }
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.singletonList(new SimpleGrantedAuthority("client"));
+        return List.of(new SimpleGrantedAuthority("ROLE_".concat(this.role)));
 
     }
 
-    @Override
-    public String getPassword() {
-        return this.password;
-    }
 
     @Override
     public String getUsername() {
         return this.username;
     }
 
-    @Override
-    public boolean isAccountNonExpired() {
-        return true;
-    }
-
-    @Override
-    public boolean isCredentialsNonExpired() {
-        return true;
-    }
-
-    @Override
-    public boolean isEnabled() {
-        return true;
-    }
 }
